# bitcrush

./: README.md  REWRITE_PLAN.md  commands.txt  index.html  old-repo.xml  package.json  repomix-output.xml  vite.config.ts
.cursor/: rules.txt
.github/workflows/: ci.yml
config/gpl-palettes/: comicscapes-50.gpl  plague.gpl
pages/effects/: index.html
pages/pixelate/: index.html
scripts/: build.ts
src/: main.ts  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/palettes/: palettes.toml
src-tauri/resources/palettes/gpl/: 1-bit-chill.gpl  2-bit-pips.gpl  agent.gpl  autumn-tree.gpl  ayy4.gpl  blurple.gpl  cereal-years.gpl  cmyk-printer.gpl  crimson-gold.gpl  dream-haze-8.gpl  dreamscape8.gpl  ekko-64.gpl  fuzzyfour.gpl  gb-mignola.gpl  hotpanda.gpl  macao-12.gpl  mother32.gpl  newport-beach-6.gpl  nice69.gpl  old-movie.gpl  old-mug.gpl  pastry-gradient.gpl  pola5.gpl  silverplate.gpl  skibidi.gpl  warmy-spring.gpl  window-of-opportunity.gpl  woodcarver.gpl
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/engine/: color.rs  filters.rs  mod.rs  palettes.rs  pipeline.rs
src-tauri/src/engine/algorithms/: artistic.rs  bayer.rs  enhanced.rs  floyd_steinberg.rs  mod.rs  standard.rs
src-tauri/src/engine/dither/: atkinson.rs  bayer.rs  burkes.rs  dual_color.rs  edge.rs  floyd_steinberg.rs  jarvis_judice_ninke.rs  mod.rs  ordered_selective.rs  randomized_selective.rs  selective.rs  sierra.rs  stucki.rs
src-tauri/src/engine/filters/: mod.rs  vhs.rs
src/app/: router.ts
